--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "postinstall": "npm run build"
   },
   "dependencies": {
-    "better-sqlite3": "^9.4.3",
+    "sqlite3": "^5.1.7",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "lucide-react": "^0.344.0",
