--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
     "postinstall": "npm run build"
   },
   "dependencies": {
-    "pg": "^8.11.3",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "dotenv": "^16.4.5"
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
